--- a/index.html
+++ b/index.html
@@ -216,11 +216,12 @@
       </div>
       <div class="contact-details">
         
-        <p>Christchurch, New Zealand</p>
+        <b><p>Christchurch, New Zealand</p></b>
       </div>
 
       <!-- Action Buttons -->
       <div class="action-buttons">
+        <b>
         <a href="tel:+64275022825"><i class="fas fa-phone"></i> Call</a>
         <a href="sms:+64275022825"><i class="fas fa-sms"></i> SMS</a>
         <a href="https://wa.me/64272147693"><i class="fab fa-whatsapp"></i> WhatsApp</a>
@@ -228,6 +229,7 @@
         
         <a href="https://www.facebook.com/p/The-Inspired-Beauty-61558791268136/"><i class="fab fa-facebook"></i> Facebook</a>
         <a href="https://www.instagram.com/theinspired_beauty/"><i class="fab fa-instagram"></i> Instagram</a>
+      </b>
       </div>
     </div>
 
