Booking option as well

--- a/index.html
+++ b/index.html
@@ -280,7 +280,9 @@
       <p><b>Account Type:<br> Westpac Everyday <br></b><button class="copy-btn" onclick="copyToClipboard('Westpac Everyday', this)">Copy Bank Name</button></p>
   </div>
 </div>
-
+<div class="action-buttons">
+<b><a href ="https://www.fresha.com/book-now/inspired-beauty-iaobou7i/all-offer?share&pId=1205134"> Book Your Appointment </a></b>
+</div>
 
       <!-- Action Buttons -->
       <div class="action-buttons">
